<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
    <string name="app_name" translatable="false">AutoJs6</string>
    <string name="app_name_qq" translatable="false">QQ</string>
    <string name="color_library_identifier_android_colors" translatable="false">Android</string>
    <string name="color_library_identifier_css_colors" translatable="false">CSS</string>
    <string name="color_library_identifier_web_colors" translatable="false">WEB</string>
    <string name="com_twofortyfouram_log_tag" tools:ignore="ResourceName" translatable="false" />
    <string name="default_build_apk_version_code" translatable="false">1</string>
    <string name="default_build_apk_version_name" translatable="false">1.0.0</string>
    <string name="default_key_editor_pinch_to_zoom_strategy" translatable="false">@string/key_editor_pinch_to_zoom_change_text_size</string>
    <string name="default_key_file_extensions" translatable="false">@string/key_file_extensions_show_all_but_executable</string>
    <string name="default_key_hidden_files" translatable="false">@string/key_hidden_files_not_show</string>
    <string name="default_key_keep_screen_on_when_in_foreground" translatable="false">@string/key_keep_screen_on_when_in_foreground_disabled</string>
    <string name="default_key_root_record_out_file_type" translatable="false">@string/key_root_record_out_file_type_binary</string>
    <string name="default_main_file_name" translatable="false">main.js</string>
    <string name="developer_full_name" translatable="false">SuperMonster003</string>
    <string name="developer_nickname" translatable="false">SuperMonster003</string>
    <string name="ellipsis_six" translatable="false" tools:ignore="TypographyEllipsis">... ...</string>
    <string name="ellipsis_three" translatable="false" tools:ignore="TypographyEllipsis">...</string>
    <string name="email" translatable="false">hybbbb1996@gmail.com</string>
    <string name="entry_app_language_ar" translatable="false">العربية</string>
    <string name="entry_app_language_en" translatable="false">English</string>
    <string name="entry_app_language_es" translatable="false">Español</string>
    <string name="entry_app_language_fr" translatable="false">Français</string>
    <string name="entry_app_language_ja" translatable="false">日本語</string>
    <string name="entry_app_language_ko" translatable="false">한국어</string>
    <string name="entry_app_language_ru" translatable="false">Русский</string>
    <string name="entry_app_language_zh_hans" translatable="false">简体中文</string>
    <string name="entry_app_language_zh_hant_hk" translatable="false">繁體中文 (香港)</string>
    <string name="entry_app_language_zh_hant_tw" translatable="false">繁體中文 (台灣)</string>
    <string name="format_default_package_name" formatted="true" translatable="false">org.autojs.autojs6.%s</string>
    <string name="format_dialog_progress_number_format_kilo_bytes" translatable="false">%.1fKB/%.1fKB</string>
    <string name="format_dialog_progress_number_format_mega_bytes" translatable="false">%.2fMB/%.2fMB</string>
    <string name="id_launcher_shortcut_docs" translatable="false">shortcut_$_docs</string>
    <string name="id_launcher_shortcut_log" translatable="false">shortcut_$_log</string>
    <string name="id_launcher_shortcut_settings" translatable="false">shortcut_$_settings</string>
    <string name="key_a11y_service" translatable="false">key_$_a11y_service</string>
    <string name="key_about_app_and_developer" translatable="false">key_$_about_app_and_developer</string>
    <string name="key_about_app_tips" translatable="false">key_$_about_app_tips</string>
    <string name="key_all_files_access" translatable="false">key_$_all_files_access</string>
    <string name="key_app_language" translatable="false">key_$_app_language</string>
    <string name="key_app_language_ar" translatable="false">key_$_app_language_ar</string>
    <string name="key_app_language_auto" translatable="false">key_$_app_language_auto</string>
    <string name="key_app_language_en" translatable="false">key_$_app_language_en</string>
    <string name="key_app_language_es" translatable="false">key_$_app_language_es</string>
    <string name="key_app_language_fr" translatable="false">key_$_app_language_fr</string>
    <string name="key_app_language_ja" translatable="false">key_$_app_language_ja</string>
    <string name="key_app_language_ko" translatable="false">key_$_app_language_ko</string>
    <string name="key_app_language_ru" translatable="false">key_$_app_language_ru</string>
    <string name="key_app_language_zh_hans" translatable="false">key_$_app_language_zh</string>
    <string name="key_app_language_zh_hant_hk" translatable="false">key_$_app_language_zh_hk</string>
    <string name="key_app_language_zh_hant_tw" translatable="false">key_$_app_language_zh_tw</string>
    <string name="key_auto_check_for_updates" translatable="false">key_$_auto_check_for_updates</string>
    <string name="key_auto_night_mode_enabled" translatable="false">key_$_auto_night_mode_enabled</string>
    <string name="key_change_working_dir" translatable="false">key_$_change_working_dir</string>
    <string name="key_check_for_updates" translatable="false">key_$_check_for_updates</string>
    <string name="key_check_for_updates_while_ignoring_the_local_version" translatable="false">key_$_check_for_updates_while_ignoring_the_local_version</string>
    <string name="key_client_socket_normally_closed" translatable="false">key_$_client_socket_normally_closed</string>
    <string name="key_color_select_activity_legacy_layout" translatable="false">key_$_color_select_activity_legacy_layout</string>
    <string name="key_dialog_check_display_over_other_apps" translatable="false">key_$_dialog_check_display_over_other_apps</string>
    <string name="key_dialog_foreground_svc" translatable="false">key_$_dialog_foreground_svc</string>
    <string name="key_dialog_log_entries_exported" translatable="false">key_$_dialog_log_entries_exported</string>
    <string name="key_dialog_manage_all_files_permission" translatable="false">key_$_dialog_manage_all_files_permission</string>
    <string name="key_enable_a11y_service_with_root_access" translatable="false">key_$_enable_a11y_service_with_root_access</string>
    <string name="key_enable_a11y_service_with_secure_settings" translatable="false">key_$_enable_a11y_service_with_secure_settings</string>
    <string name="key_keep_screen_on_when_in_foreground" translatable="false">key_$_keep_screen_on_when_in_foreground</string>
    <string name="key_keep_screen_on_when_in_foreground_disabled" translatable="false">key_$_keep_screen_on_when_in_foreground_disabled</string>
    <string name="key_manage_ignored_updates" translatable="false">key_$_manage_ignored_updates</string>
    <string name="key_night_mode" translatable="false">key_$_night_mode</string>
    <string name="key_night_mode_follow_system" translatable="false">key_$_night_mode_follow_system</string>
    <string name="key_root_mode" translatable="false">key_$_root_mode</string>
    <string name="key_root_mode_auto_detect" translatable="false">key_$_root_mode_auto_detect</string>
    <string name="key_theme_color" translatable="false">key_$_theme_color</string>
    <string name="description_app_language_preference">Preference for changing the display language of AutoJs6, including exception messages from running scripts.\n\nNote: an app restart may be needed to make language applied as expected.</string>
    <string name="description_check_for_updates_preference">AutoJs6 gets and downloads updates from GitHub.</string>
    <string name="description_keep_screen_on_when_in_foreground_preference">Preference for keeping the device\'s screen turned on and bright when AutoJs6 is in the foreground.\nTo make it happen only on the homepage among all pages of the AutoJs6 application, choose \"homepage only\" option.</string>
    <string name="description_manage_ignored_updates_preference">Click to view or manage list items.\nLong press to remove the list item.</string>
    <string name="description_night_mode_preference">Night mode (also known as Dark theme) applies to both the Android system UI and apps running on the device, which improves visibility for users with low vision and those who are sensitive to bright light, and makes it easier for anyone to use a device in a low-light environment.\n\nFollow system: AutoJs6 has Night mode settings same as Android system\nAlways on: AutoJs6 keeps Night mode on (regardless of Android system settings)\nAlways off: AutoJs6 keeps Night mode off (regardless of Android system settings)\n\nNote: Follow system option is only for Android API Level 28 (Android 9) [P] and above.</string>
    <string name="description_night_mode_preference_more">To enable Night mode in Android system:\n- Android API Level 29 (Android 10) [Q] and above: Settings -> Display -> Theme.\n- Android API Level 28 (Android 9) [P]: Developer options -> Night mode.\n\nThe following conditions must to met for applying a Night mode (Dark theme) to web-based content using a WebView component (like AutoJs6 documentation page):\n1. Android System WebView (or browsers like Google Chrome):\n- Android API Level 29 (Android 10) [Q] and above: version >= 76\n- Android API Level 28 (Android 9) [P]: version >= 105\n2. Web-based content in WebView component is adapted to Dark theme (by CSS or Android XML resources and so forth)</string>
    <string name="description_root_mode_preference">If you have exotic root or abnormal state for root access, you can force set root to root or non-root.</string>
    <string name="description_theme_color_preference">Theme color is applied to widgets including but not limited to the following ones:\nStatus bar\nAppbar\nFile icon\nTask item icon\nFab\nSettings category title\nSwitch button\n\nNote: As of AutoJs6 version 6.2.0, there has been no difference between primary color, primary dark color and accent color yet.</string>
    <string name="dialog_button_system_settings">System Settings</string>
    <string name="dialog_button_system_settings_simplified">System</string>
    <string name="prompt_restart_may_be_needed_for_language_switch">An app restart may be needed to make language applied as expected</string>
    <string name="summary_enable_a11y_service_with_root_access">Enable accessibility service with root access automatically when needed</string>
    <string name="summary_enable_a11y_service_with_secure_settings">Enable accessibility service with secure settings automatically when needed</string>
    <string name="text_a11y_service">Accessibility service</string>
    <string name="text_app_language">Language</string>
    <string name="text_appearance">Appearance</string>
    <string name="text_auto_check_for_updates">Auto check for updates</string>
    <string name="text_auto_check_for_updates_and_show_snackbar">Check for updates automatically and show a snackbar on homepage</string>
    <string name="text_check_for_updates">Check for updates</string>
    <string name="text_config">Config</string>
    <string name="text_enable_a11y_service_with_root_access_automatically">Enable accessibility service with root access automatically</string>
    <string name="text_enable_a11y_service_with_secure_settings_automatically">Enable accessibility service with secure settings automatically</string>
    <string name="text_keep_screen_on_when_in_foreground">Keep screen on when in foreground</string>
    <string name="text_manage_ignored_updates">Manage ignored updates</string>
    <string name="text_night_mode">Night mode</string>
    <string name="text_root_mode_title">Force set root check</string>
    <string name="text_theme_color">Theme color</string>
    <string name="text_updates">Updates</string>
</resources>