<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
            app:layout="@layout/preference_category_custom"
            app:title="@string/text_appearance">

        <org.autojs.autojs.ui.settings.AppLanguagePreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_app_language"
                app:title="@string/text_app_language"
                app:itemKeys="@array/keys_app_language"
                app:itemValues="@array/values_app_language"
                app:itemDefaultKey="@string/key_app_language_auto"
                app:neutralText="@string/dialog_button_system_settings"
                app:neutralTextShort="@string/dialog_button_system_settings_simplified"
                app:longClickPrompt="@string/description_app_language_preference"
                app:onConfirmPrompt="@string/prompt_restart_may_be_needed_for_language_switch" />

        <org.autojs.autojs.ui.settings.NightModePreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_night_mode"
                app:title="@string/text_night_mode"
                app:itemKeys="@array/keys_night_mode"
                app:itemValues="@array/values_night_mode"
                app:itemDefaultKey="@string/key_night_mode_follow_system"
                app:longClickPrompt="@string/description_night_mode_preference"
                app:longClickPromptMore="@string/description_night_mode_preference_more" />

        <org.autojs.autojs.ui.settings.ThemeColorPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_theme_color"
                app:title="@string/text_theme_color"
                app:longClickPrompt="@string/description_theme_color_preference" />

        <org.autojs.autojs.ui.settings.KeepScreenOnWhenInForegroundPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_keep_screen_on_when_in_foreground"
                app:title="@string/text_keep_screen_on_when_in_foreground"
                app:itemKeys="@array/keys_keep_screen_on_when_in_foreground"
                app:itemValues="@array/values_keep_screen_on_when_in_foreground"
                app:itemDefaultKey="@string/key_keep_screen_on_when_in_foreground_disabled"
                app:longClickPrompt="@string/description_keep_screen_on_when_in_foreground_preference" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
            app:layout="@layout/preference_category_custom"
            app:title="@string/text_config">


        <org.autojs.autojs.ui.settings.RootModePreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_root_mode"
                app:title="@string/text_root_mode_title"
                app:itemKeys="@array/keys_root_mode"
                app:itemValues="@array/values_root_mode"
                app:itemDefaultKey="@string/key_root_mode_auto_detect"
                app:longClickPrompt="@string/description_root_mode_preference" />



    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
            app:layout="@layout/preference_category_custom"
            app:title="@string/text_a11y_service">

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_enable_a11y_service_with_root_access"
                app:defaultValue="@bool/pref_enable_a11y_service_with_root_access"
                app:title="@string/text_enable_a11y_service_with_root_access_automatically"
                app:summary="@string/summary_enable_a11y_service_with_root_access" />

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_enable_a11y_service_with_secure_settings"
                app:defaultValue="@bool/pref_enable_a11y_service_with_secure_settings"
                app:title="@string/text_enable_a11y_service_with_secure_settings_automatically"
                app:summary="@string/summary_enable_a11y_service_with_secure_settings" />

    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>


    <org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory
            app:layout="@layout/preference_category_custom"
            app:title="@string/text_updates">

        <org.autojs.autojs.ui.settings.CheckForUpdatesPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_check_for_updates"
                app:title="@string/text_check_for_updates"
                app:longClickPrompt="@string/description_check_for_updates_preference" />

        <org.autojs.autojs.theme.preference.ThemeColorSwitchPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_auto_check_for_updates"
                app:defaultValue="@bool/pref_auto_check_for_updates"
                app:title="@string/text_auto_check_for_updates"
                app:summary="@string/text_auto_check_for_updates_and_show_snackbar" />

        <org.autojs.autojs.ui.settings.ManageIgnoredUpdatesPreference
                app:layout="@layout/preference_custom"
                app:key="@string/key_manage_ignored_updates"
                app:title="@string/text_manage_ignored_updates"
                app:longClickPrompt="@string/description_manage_ignored_updates_preference" />
    </org.autojs.autojs.theme.preference.ThemeColorPreferenceCategory>

</PreferenceScreen>